=== Transmission 1.76 (2009/09/13) ===
==== All Platforms ====
  * Fix manpage errors
  * Use automake's "quieter builds" rule when available
==== GTK+ ====
  * Fix 1.61 build failure on systems with new versions of glib but older versions of gtk
  * Fix tray menu's main window status when Transmission is started minimized

=== Transmission 1.75 (2009/09/13) ===
[http://trac.transmissionbt.com/query?milestone=1.75&group=component&groupdesc=1&order=severity All tickets closed by this release]
==== All Platforms ====
  * Don't wait so long on unresponsive trackers if there are other trackers to try
  * Adding corrupt/invalid torrents could crash Transmission
  * Fix 1.74 bug that caused a high CPU load on startup
  * Fix 1.74 bug that stopped multitracker if a single tracker sent an error message
  * Fix bug in converting other charsets to UTF-8
  * Handle HTTP redirects more gracefully
  * Faster verification of local data for torrents with small piece size
  * Fix 1.74 build error when compiling without DHT
==== Mac ====
  * Fix libcurl build issue that caused tracker connectivity problems on Snow Leopard
  * Fix error when creating a torrent file while still changing the announce address
==== GTK+ ====
  * Fix "sort by time remaining"
  * Fix the turtle toggle button on old versions of GTK+
  * Fix startup error if another copy of the Transmission GTK client is running
  * Fix clang build issue

=== Transmission 1.74 (2009/08/24) ===
[http://trac.transmissionbt.com/query?milestone=1.74&group=component&groupdesc=1&order=severity All tickets closed by this release]
==== All Platforms ====
  * Better data recovery in the case of an OS or Transmission crash
  * If a data file is moved, stop the torrent instead of redownloading it
  * Fix bug that didn't list some peers in the resume file and in PEX
  * More helpful torrent error messages
  * DHT now honors the bind-address-ipv4 configuration option
  * Fix Debian build error with miniupnpc